load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//kernel/rust:defs.bzl", "release_wasm")

# images — the base + flavor images, built as DETERMINISTIC pkg_tar with NO manual staging:
# no remove_dir_all, no ordering hazard, no fs::copy into a source tree — the three
# memcontainers build wounds, all closed by the dependency graph (§7.3, B1). Fixed
# mtime/uid/gid makes the image content-addressed and snapshots exact (A8, §10). ONE
# pkg_tar is consumed by both the host CLI and the e2e tests, so the two byte-identical tar
# implementations collapse into one.
#
# `base` is a rootfs carrying just /etc/profile (the in-kernel rescue shell boots without any
# guest programs). `posix` layers the guest shell + the coreutils boxes on top — a flavor image
# is `base` + packs stacked by more pkg_tar.
pkg_tar(
    name = "base",
    srcs = glob(["rootfs/**"]),
    # Map rootfs/etc/profile → /etc/profile in the tar (the kernel mounts it at /).
    strip_prefix = "rootfs",
    # Determinism (§10): root.root ownership and pkg_tar's default `portable_mtime` (a
    # fixed epoch), so the tar bytes are a pure function of the content — reproducible and
    # content-addressable.
    owner = "0.0",
    visibility = ["//visibility:public"],
)

# /bin/sh — surfaced at wasm32-freestanding + opt (sysroot-native, pure-mc). The coreutils boxes
# come from mc_box (//programs/coreutils): each `mcbox-<tier>_opt` is the box surfaced + attested at
# wasm32-wasi; their /bin symlinks are generated below from the boxes' mc_applets rosters.
release_wasm(
    name = "sh_wasm",
    lib = "//programs/sh:sh",
    platform = "//platforms:wasm32_freestanding",
)

# /bin/<applet> → its LEAST-PRIVILEGE box, generated from the four boxes' mc_applets rosters
# (mc-roster, given the boxes in ASCENDING tier order → the first/lowest box wins each applet):
# echo → mcbox-isolated, cat → mcbox-readonly, rm → mcbox-readwrite, find → mcbox-full. A single
# source, so /bin can't drift from what the boxes dispatch (§16.3).
genrule(
    name = "coreutils_symlinks",
    srcs = [
        "//programs/coreutils:mcbox-isolated_opt",
        "//programs/coreutils:mcbox-readonly_opt",
        "//programs/coreutils:mcbox-readwrite_opt",
        "//programs/coreutils:mcbox-full_opt",
    ],
    outs = ["coreutils_symlinks.tar"],
    cmd = "$(execpath //tools/mc-roster) " +
          "$(execpath //programs/coreutils:mcbox-isolated_opt) mcbox-isolated " +
          "$(execpath //programs/coreutils:mcbox-readonly_opt) mcbox-readonly " +
          "$(execpath //programs/coreutils:mcbox-readwrite_opt) mcbox-readwrite " +
          "$(execpath //programs/coreutils:mcbox-full_opt) mcbox-full $@",
    tools = ["//tools/mc-roster"],
)

# posix — base + the guest shell (pid 1) + ALL FOUR per-tier coreutils boxes, every command's /bin
# symlink routed to its least-privilege box (coreutils_symlinks). The boxes are cumulative
# (full ⊇ readwrite ⊇ readonly ⊇ isolated); the redundancy is the price of per-tool least privilege
# — the same applet runs isolated from mcbox-isolated, full from mcbox-full, so each command is
# staged from the lowest box that carries it.
pkg_tar(
    name = "posix",
    files = {
        ":sh_wasm": "/bin/sh",
        "//programs/coreutils:mcbox-isolated_opt": "/bin/mcbox-isolated",
        "//programs/coreutils:mcbox-readonly_opt": "/bin/mcbox-readonly",
        "//programs/coreutils:mcbox-readwrite_opt": "/bin/mcbox-readwrite",
        "//programs/coreutils:mcbox-full_opt": "/bin/mcbox-full",
    },
    owner = "0.0",
    deps = [
        ":base",
        ":coreutils_symlinks",  # /bin/<applet> → least-privilege box
    ],
    visibility = ["//visibility:public"],
)
