load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//kernel/rust:defs.bzl", "release_wasm")

# images — the base + flavor images, built as DETERMINISTIC pkg_tar with NO manual staging: no
# remove_dir_all, no ordering hazard, no fs::copy into a source tree — the three memcontainers build
# wounds, all closed by the dependency graph (§7.3, B1). Fixed mtime/uid/gid makes the image
# content-addressed and snapshots exact (A8, §10). ONE pkg_tar is consumed by both the host CLI and
# the e2e tests, so the two byte-identical tar implementations collapse into one.
#
# Three stacked layers, each inheriting the one below via pkg_tar `deps`:
#   rootfs  — just /etc/profile (internal).
#   base    — rootfs + /bin/{sh,pkgfsd,invoke}: a real but command-less shell, the shared substrate.
#   minimal — base + the four MINIMAL coreutils boxes (the curated ~15) + their /bin symlinks.
#   posix   — base + the four FULL coreutils boxes (everything) + their /bin symlinks.

# rootfs — just /etc/profile (the kernel mounts it at /). The internal skeleton `base` layers onto.
pkg_tar(
    name = "rootfs",
    srcs = glob(["rootfs/**"]),
    strip_prefix = "rootfs",  # rootfs/etc/profile → /etc/profile
    owner = "0.0",  # determinism (§10): root.root + fixed portable_mtime → content-addressable
)

# The three SYSTEM binaries, each sysroot-native + pure-mc at wasm32-freestanding + opt: /bin/sh (the
# guest shell, boots as pid 1), /bin/invoke (the host-tool bridge), /bin/pkgfsd (the /pkg daemon).
release_wasm(
    name = "sh_wasm",
    lib = "//programs/sh:sh",
    platform = "//platforms:wasm32_freestanding",
)

release_wasm(
    name = "invoke_wasm",
    lib = "//programs/invoke:invoke",
    platform = "//platforms:wasm32_freestanding",
)

release_wasm(
    name = "pkgfsd_wasm",
    lib = "//programs/pkgfsd:pkgfsd",
    platform = "//platforms:wasm32_freestanding",
)

# base — rootfs + the three system binaries: a real but command-less shell, the substrate BOTH
# flavors build on (VISION §16). NOT a shipped flavor on its own (no coreutils — "make your own
# harness": with sh + pkgfsd + invoke you can bootstrap anything); minimal/posix each add a command
# set by layering on top. sh boots as pid 1; the in-kernel rescue shell is now only the no-/bin/sh
# fallback.
pkg_tar(
    name = "base",
    files = {
        ":sh_wasm": "/bin/sh",
        ":invoke_wasm": "/bin/invoke",
        ":pkgfsd_wasm": "/bin/pkgfsd",
    },
    owner = "0.0",
    deps = [":rootfs"],
    visibility = ["//visibility:public"],
)

# /bin/<applet> → its LEAST-PRIVILEGE box, generated by mc-roster from the boxes' mc_applets rosters
# (boxes in ASCENDING tier order → the lowest box that carries each applet wins). A single source, so
# /bin can't drift from what the boxes dispatch (§16.3). One roster per flavor — the boxes differ.
genrule(
    name = "coreutils_symlinks",
    srcs = [
        "//programs/coreutils:mcbox-isolated_opt",
        "//programs/coreutils:mcbox-readonly_opt",
        "//programs/coreutils:mcbox-readwrite_opt",
        "//programs/coreutils:mcbox-full_opt",
    ],
    outs = ["coreutils_symlinks.tar"],
    cmd = "$(execpath //tools/mc-roster) " +
          "$(execpath //programs/coreutils:mcbox-isolated_opt) mcbox-isolated " +
          "$(execpath //programs/coreutils:mcbox-readonly_opt) mcbox-readonly " +
          "$(execpath //programs/coreutils:mcbox-readwrite_opt) mcbox-readwrite " +
          "$(execpath //programs/coreutils:mcbox-full_opt) mcbox-full $@",
    tools = ["//tools/mc-roster"],
)

# The minimal flavor's symlinks — same mc-roster tool, over the four MINIMAL boxes (so /bin/<applet>
# → /bin/mcbox-min-<tier>).
genrule(
    name = "minimal_symlinks",
    srcs = [
        "//programs/coreutils:mcbox-min-isolated_opt",
        "//programs/coreutils:mcbox-min-readonly_opt",
        "//programs/coreutils:mcbox-min-readwrite_opt",
        "//programs/coreutils:mcbox-min-full_opt",
    ],
    outs = ["minimal_symlinks.tar"],
    cmd = "$(execpath //tools/mc-roster) " +
          "$(execpath //programs/coreutils:mcbox-min-isolated_opt) mcbox-min-isolated " +
          "$(execpath //programs/coreutils:mcbox-min-readonly_opt) mcbox-min-readonly " +
          "$(execpath //programs/coreutils:mcbox-min-readwrite_opt) mcbox-min-readwrite " +
          "$(execpath //programs/coreutils:mcbox-min-full_opt) mcbox-min-full $@",
    tools = ["//tools/mc-roster"],
)

# minimal — base + the four MINIMAL boxes (the curated ~15: the carry-both builtin twins + core file
# ops) + their symlinks. Each /bin/<applet> routes to its least-privilege mcbox-min-<tier>.
pkg_tar(
    name = "minimal",
    files = {
        "//programs/coreutils:mcbox-min-isolated_opt": "/bin/mcbox-min-isolated",
        "//programs/coreutils:mcbox-min-readonly_opt": "/bin/mcbox-min-readonly",
        "//programs/coreutils:mcbox-min-readwrite_opt": "/bin/mcbox-min-readwrite",
        "//programs/coreutils:mcbox-min-full_opt": "/bin/mcbox-min-full",
    },
    owner = "0.0",
    deps = [":base", ":minimal_symlinks"],
    visibility = ["//visibility:public"],
)

# posix — base + ALL FOUR full per-tier coreutils boxes (every command), each /bin symlink routed to
# its least-privilege box. The boxes are DISJOINT (each carries only its tier's applets); the /bin
# routing spawns every command from its lowest box (§16.3).
pkg_tar(
    name = "posix",
    files = {
        "//programs/coreutils:mcbox-isolated_opt": "/bin/mcbox-isolated",
        "//programs/coreutils:mcbox-readonly_opt": "/bin/mcbox-readonly",
        "//programs/coreutils:mcbox-readwrite_opt": "/bin/mcbox-readwrite",
        "//programs/coreutils:mcbox-full_opt": "/bin/mcbox-full",
    },
    owner = "0.0",
    deps = [":base", ":coreutils_symlinks"],
    visibility = ["//visibility:public"],
)
