load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//kernel/rust:defs.bzl", "release_wasm")

# images — the base + flavor images, built as DETERMINISTIC pkg_tar with NO manual staging: no
# remove_dir_all, no ordering hazard, no fs::copy into a source tree — the three memcontainers build
# wounds, all closed by the dependency graph (§7.3, B1). Fixed mtime/uid/gid makes the image
# content-addressed and snapshots exact (A8, §10). ONE pkg_tar is consumed by both the host CLI and
# the e2e tests, so the two byte-identical tar implementations collapse into one.
#
# Three stacked layers, each inheriting the one below via pkg_tar `deps`:
#   rootfs  — just /etc/profile (internal).
#   base    — rootfs + /bin/{sh,pkgfsd,invoke}: a real but command-less shell, the shared substrate.
#   minimal — base + the four MINIMAL coreutils boxes (the curated ~15) + their /bin symlinks.
#   posix   — base + the four FULL coreutils boxes (everything) + their /bin symlinks.

# rootfs — just /etc/profile (the kernel mounts it at /). The internal skeleton `base` layers onto.
pkg_tar(
    name = "rootfs",
    srcs = glob(["rootfs/**"]),
    strip_prefix = "rootfs",  # rootfs/etc/profile → /etc/profile
    owner = "0.0",  # determinism (§10): root.root + fixed portable_mtime → content-addressable
)

# The three SYSTEM binaries, each sysroot-native + pure-mc at wasm32-freestanding + opt: /bin/sh (the
# guest shell, boots as pid 1), /bin/invoke (the host-tool bridge), /bin/pkgfsd (the /pkg daemon).
release_wasm(
    name = "sh_wasm",
    lib = "//programs/sh:sh",
    platform = "//platforms:wasm32_freestanding",
)

release_wasm(
    name = "invoke_wasm",
    lib = "//programs/invoke:invoke",
    platform = "//platforms:wasm32_freestanding",
)

release_wasm(
    name = "pkgfsd_wasm",
    lib = "//programs/pkgfsd:pkgfsd",
    platform = "//platforms:wasm32_freestanding",
)

# base — rootfs + the three system binaries: a real but command-less shell, the substrate BOTH
# flavors build on (VISION §16). NOT a shipped flavor on its own (no coreutils — "make your own
# harness": with sh + pkgfsd + invoke you can bootstrap anything); minimal/posix each add a command
# set by layering on top. sh boots as pid 1; the in-kernel rescue shell is now only the no-/bin/sh
# fallback.
pkg_tar(
    name = "base",
    files = {
        ":sh_wasm": "/bin/sh",
        ":invoke_wasm": "/bin/invoke",
        ":pkgfsd_wasm": "/bin/pkgfsd",
    },
    owner = "0.0",
    deps = [":rootfs"],
    visibility = ["//visibility:public"],
)

# /bin/<applet> → its LEAST-PRIVILEGE box, generated by mc-roster from the boxes' mc_applets rosters
# (boxes in ASCENDING tier order → the lowest box that carries each applet wins). A single source, so
# /bin can't drift from what the boxes dispatch (§16.3). One roster per flavor — the boxes differ.
genrule(
    name = "coreutils_symlinks",
    srcs = [
        "//programs/coreutils:mcbox-isolated_opt",
        "//programs/coreutils:mcbox-readonly_opt",
        "//programs/coreutils:mcbox-readwrite_opt",
        "//programs/coreutils:mcbox-full_opt",
    ],
    outs = ["coreutils_symlinks.tar"],
    cmd = "$(execpath //tools/mc-roster) " +
          "$(execpath //programs/coreutils:mcbox-isolated_opt) mcbox-isolated " +
          "$(execpath //programs/coreutils:mcbox-readonly_opt) mcbox-readonly " +
          "$(execpath //programs/coreutils:mcbox-readwrite_opt) mcbox-readwrite " +
          "$(execpath //programs/coreutils:mcbox-full_opt) mcbox-full $@",
    tools = ["//tools/mc-roster"],
)

# The minimal flavor's symlinks — same mc-roster tool, over the four MINIMAL boxes (so /bin/<applet>
# → /bin/mcbox-min-<tier>).
genrule(
    name = "minimal_symlinks",
    srcs = [
        "//programs/coreutils:mcbox-min-isolated_opt",
        "//programs/coreutils:mcbox-min-readonly_opt",
        "//programs/coreutils:mcbox-min-readwrite_opt",
        "//programs/coreutils:mcbox-min-full_opt",
    ],
    outs = ["minimal_symlinks.tar"],
    cmd = "$(execpath //tools/mc-roster) " +
          "$(execpath //programs/coreutils:mcbox-min-isolated_opt) mcbox-min-isolated " +
          "$(execpath //programs/coreutils:mcbox-min-readonly_opt) mcbox-min-readonly " +
          "$(execpath //programs/coreutils:mcbox-min-readwrite_opt) mcbox-min-readwrite " +
          "$(execpath //programs/coreutils:mcbox-min-full_opt) mcbox-min-full $@",
    tools = ["//tools/mc-roster"],
)

# minimal — base + the four MINIMAL boxes (the curated ~15: the carry-both builtin twins + core file
# ops) + their symlinks. Each /bin/<applet> routes to its least-privilege mcbox-min-<tier>.
pkg_tar(
    name = "minimal",
    files = {
        "//programs/coreutils:mcbox-min-isolated_opt": "/bin/mcbox-min-isolated",
        "//programs/coreutils:mcbox-min-readonly_opt": "/bin/mcbox-min-readonly",
        "//programs/coreutils:mcbox-min-readwrite_opt": "/bin/mcbox-min-readwrite",
        "//programs/coreutils:mcbox-min-full_opt": "/bin/mcbox-min-full",
    },
    owner = "0.0",
    deps = [":base", ":minimal_symlinks"],
    visibility = ["//visibility:public"],
)

# posix — base + ALL FOUR full per-tier coreutils boxes (every command), each /bin symlink routed to
# its least-privilege box. The boxes are DISJOINT (each carries only its tier's applets); the /bin
# routing spawns every command from its lowest box (§16.3).
pkg_tar(
    name = "posix",
    files = {
        "//programs/coreutils:mcbox-isolated_opt": "/bin/mcbox-isolated",
        "//programs/coreutils:mcbox-readonly_opt": "/bin/mcbox-readonly",
        "//programs/coreutils:mcbox-readwrite_opt": "/bin/mcbox-readwrite",
        "//programs/coreutils:mcbox-full_opt": "/bin/mcbox-full",
    },
    owner = "0.0",
    deps = [":base", ":coreutils_symlinks"],
    visibility = ["//visibility:public"],
)

# loom — posix + the Luau pair, one-binary domain services (§16.5). The first NON-coreutils flavor:
# posix's full userland plus the stamped, pure-mc luau interpreter (mc_tier=full, 256 MiB · 2T · 40k,
# json/hash/time/string batteries embedded) and luau-analyze type checker (256 MiB · 400B · 40k).
pkg_tar(
    name = "loom",
    files = {
        "//third_party/luau/glue:luau": "/bin/luau",
        "//third_party/luau/glue:luau-analyze": "/bin/luau-analyze",
        # The agent-facing skill docs ride the flavor (not the binary) — luau + the doc generators.
        "//third_party/luau/skills:luau.md": "/skills/luau.md",
        "//third_party/luau/skills:docx.md": "/skills/docx.md",
        "//third_party/luau/skills:xlsx.md": "/skills/xlsx.md",
        "//third_party/luau/skills:pptx.md": "/skills/pptx.md",
    },
    owner = "0.0",
    deps = [":posix"],
    visibility = ["//visibility:public"],
)

# kv-test — a resident-SERVICE proof image (SERVICES.md P1): loom (the shell + /bin/luau) + /bin/kv
# (the kv service binary) + the /etc/services.json manifest that activates it at boot. On LOOM (not
# base) so the e2e proves DUAL behavior — the SAME warm service reached from the CLI (`kv get`) AND
# from Luau (`sys.svc`) — plus warm state across calls and crash-only, before sqlite.
release_wasm(
    name = "kv_wasm",
    lib = "//programs/examples/kv:kv",
    platform = "//platforms:wasm32_freestanding",
)

# /bin/crashloop — a deliberately-broken service (it crashes before svc_serve) used by the e2e to prove
# the kernel's BOUNDED activation-failure path (codex #4). lazy, so it is only activated on a connect.
release_wasm(
    name = "crashloop_wasm",
    lib = "//programs/examples/crashloop:crashloop",
    platform = "//platforms:wasm32_freestanding",
)

# /etc/services.json — GENERATED from each service binary's own mc_service name (codex #6): mc-svc-manifest
# reads "kv"/"crashloop" from the stamped wasms, so the manifest can never drift from the binaries. kv is
# eager (activated at boot — proves eager activation); crashloop is lazy (activated only on a connect).
genrule(
    name = "kv_test_services",
    srcs = [
        ":kv_wasm",
        ":crashloop_wasm",
    ],
    outs = ["kv_test_services.json"],
    cmd = "$(execpath //tools/mc-svc-manifest) eager $(execpath :kv_wasm) lazy $(execpath :crashloop_wasm) $@",
    tools = ["//tools/mc-svc-manifest"],
)

pkg_tar(
    name = "kv_test",
    files = {
        ":kv_wasm": "/bin/kv",
        ":crashloop_wasm": "/bin/crashloop",
        ":kv_test_services": "/etc/services.json",
    },
    owner = "0.0",
    deps = [":loom"],
    visibility = ["//visibility:public"],
)

# atlas — the data-intelligence flavor: loom + the sqlite resident SERVICE (the Zig-glue lane). Adds
# /bin/sqlite (the warm service binary, stamped + attested), the /etc/services.json that activates it
# at boot, the require("sqlite") library at /lib/luau/sqlite.luau, and the sqlite skill at /skills. The
# first flavor with a domain SERVICE, not just CLI tools (SERVICES.md). (sqlite-vec lands here later.)
# /etc/services.json — GENERATED from the sqlite binary's own mc_service name (codex #6). lazy (the
# default activation model): atlas spawns sqlite on the first svc_connect, not at boot.
genrule(
    name = "atlas_services",
    srcs = ["//third_party/sqlite/glue:sqlite"],
    outs = ["atlas_services.json"],
    cmd = "$(execpath //tools/mc-svc-manifest) lazy $(execpath //third_party/sqlite/glue:sqlite) $@",
    tools = ["//tools/mc-svc-manifest"],
)

pkg_tar(
    name = "atlas",
    files = {
        "//third_party/sqlite/glue:sqlite": "/bin/sqlite",
        "//third_party/sqlite/lib:sqlite.luau": "/lib/luau/sqlite.luau",
        "//third_party/sqlite/skills:sqlite.md": "/skills/sqlite.md",
        ":atlas_services": "/etc/services.json",
    },
    owner = "0.0",
    deps = [":loom"],
    visibility = ["//visibility:public"],
)
