# server — the AgentOS control-plane library (Elixir/OTP): the supervisor over wasm VMs
# described in SYSTEMS.md §13.1. It drives VMs through host_nif and deliberately stops below
# any HTTP/WebSocket deployment adapter.
#
# Mix-backed on the hermetic discord toolchain. The implementation targets are
# target_compatible_with erlang_26_2, so a bare `bazel build //...` SKIPS them
# (the rest of the repo is unaffected); public entry points such as :mix_test and
# :agent_os_package use //bazel:elixir_transition.bzl to apply the Erlang/Elixir
# platform only on the dependency edge into this package, without flipping
# Bazel's top-level --platforms/--host_platform. The VM-driving NIF
# (//memcontainers/hosts/wasmtime/nif:host_nif_release) is staged into priv/ and
# loaded at runtime by AgentOS.Host.Nif — Bazel builds the release .so, mix never
# compiles it.
load("//bazel:elixir_transition.bzl", "elixir_file", "elixir_test")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@rules_elixir//:defs.bzl", "mix_library", "mix_test")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

_ELIXIR_ONLY = ["@erlang_config//:erlang_26_2"]
_SERVER_SRCS = glob(["lib/**/*.ex"])
_PACKAGE_SRCS = glob(
    ["lib/**/*.ex"],
    exclude = ["lib/agent_os/contracts/*.ex"],
)

write_source_files(
    name = "agent_os_contracts_sync",
    files = {
        "lib/agent_os/contracts/constants.ex": "//memcontainers/contracts:constants_elixir_gen",
        "lib/agent_os/contracts/control.ex": "//memcontainers/contracts:ctl_elixir_gen",
        "lib/agent_os/contracts/llb.ex": "//memcontainers/contracts:llb_elixir_gen",
        "lib/agent_os/contracts/runner.ex": "//memcontainers/contracts:runner_elixir_gen",
        "lib/agent_os/contracts/sidecar.ex": "//memcontainers/contracts:sidecar_elixir_gen",
        "lib/agent_os/contracts/snapshot.ex": "//memcontainers/contracts:snapshot_elixir_gen",
    },
    visibility = ["//visibility:public"],
)

# Production library — `mix compile` into the agent_os app, with the NIF cdylib staged in priv/.
mix_library(
    name = "lib",
    app_name = "agent_os",
    mix_config = ":mix.exs",
    srcs = _SERVER_SRCS,
    priv = ["//memcontainers/hosts/wasmtime/nif:host_nif_release"],  # libhost_nif.so -> priv/
    tags = ["manual"],
    target_compatible_with = _ELIXIR_ONLY,
    visibility = ["//visibility:public"],
)

# Test library — same sources compiled with MIX_ENV=test.
mix_library(
    name = "lib_test",
    app_name = "agent_os",
    mix_env = "test",
    mix_config = ":mix.exs",
    srcs = _SERVER_SRCS,
    priv = ["//memcontainers/hosts/wasmtime/nif:host_nif_release"],
    tags = ["manual"],
    target_compatible_with = _ELIXIR_ONLY,
)

# `mix test` against the pre-compiled MIX_ENV=test lib (the NIF smoke test + the OTP layer test).
mix_test(
    name = "mix_test_impl",
    data = [
        "//memcontainers/images:minimal",
        "//memcontainers/images:loom",
        "//memcontainers/images:posix",
        "//memcontainers/kernel/rust:kernel",
    ],
    lib = ":lib_test",
    srcs = glob(["test/**/*.exs"]),
    target_compatible_with = _ELIXIR_ONLY,
    env = {
        "ERL_COMPILER_OPTIONS": "deterministic",
        "ELIXIR_ERL_OPTIONS": "+fnu",
    },
    tags = ["manual"],
)

# Public test entry point. Run this without `--config=elixir`; the wrapper scopes
# the Erlang/Elixir platform switch to the implementation edge so switching
# between VM/kernel tests and the control-plane test does not invalidate the
# top-level Bazel analysis cache.
elixir_test(
    name = "mix_test",
    actual = ":mix_test_impl",
    tags = ["manual"],
)

# Real KVM vertical proof. It is deliberately separate from the ordinary server suite: the target
# declares every pinned runner artifact and fails (rather than substituting a fake provider) when the
# execution host does not expose /dev/kvm.
mix_test(
    name = "kvm_test_impl",
    data = [
        "@firecracker//:firecracker",
        "@firecracker//:jailer",
        "@firecracker_kernel//file",
        "//server/sidecars/runner:health_initramfs",
    ],
    env = {
        "AGENT_OS_KVM_E2E": "1",
        "ELIXIR_ERL_OPTIONS": "+fnu",
        "ERL_COMPILER_OPTIONS": "deterministic",
    },
    lib = ":lib_test",
    srcs = [
        "test/agent_os/firecracker_test.exs",
        "test/test_helper.exs",
    ],
    tags = [
        "manual",
        "requires-kvm",
    ],
    target_compatible_with = _ELIXIR_ONLY,
)

elixir_test(
    name = "kvm_test",
    actual = ":kvm_test_impl",
    tags = [
        "manual",
        "requires-kvm",
    ],
)

# The native payload for a Mix-consuming host app. Keep it as a separate layer so the pure Elixir
# package layout stays obvious and the platform-shaped cdylib is isolated under priv/.
pkg_tar(
    name = "agent_os_package_nif",
    create_parents = False,
    files = {
        "//memcontainers/hosts/wasmtime/nif:host_nif_release": "priv/libhost_nif.so",
    },
    mode = "0644",
    modes = {
        "priv": "0755",
    },
    owner = "0.0",
    package_dir = "agent_os",
    tags = ["manual"],
    target_compatible_with = _ELIXIR_ONLY,
)

pkg_tar(
    name = "agent_os_package_src",
    create_parents = False,
    mode = "0644",
    modes = {
        "lib": "0755",
        "lib/agent_os": "0755",
        "lib/agent_os/host": "0755",
        "lib/agent_os/sidecars": "0755",
        "lib/agent_os/sidecars/firecracker": "0755",
        "lib/agent_os/sidecars/providers": "0755",
    },
    srcs = ["mix.exs"] + _PACKAGE_SRCS,
    owner = "0.0",
    package_dir = "agent_os",
    strip_prefix = ".",
    tags = ["manual"],
    target_compatible_with = _ELIXIR_ONLY,
)

pkg_tar(
    name = "agent_os_package_contracts",
    create_parents = False,
    files = {
        "//memcontainers/contracts:constants_elixir_gen": "lib/agent_os/contracts/constants.ex",
        "//memcontainers/contracts:ctl_elixir_gen": "lib/agent_os/contracts/control.ex",
        "//memcontainers/contracts:llb_elixir_gen": "lib/agent_os/contracts/llb.ex",
        "//memcontainers/contracts:runner_elixir_gen": "lib/agent_os/contracts/runner.ex",
        "//memcontainers/contracts:sidecar_elixir_gen": "lib/agent_os/contracts/sidecar.ex",
        "//memcontainers/contracts:snapshot_elixir_gen": "lib/agent_os/contracts/snapshot.ex",
    },
    mode = "0644",
    modes = {
        "lib": "0755",
        "lib/agent_os": "0755",
        "lib/agent_os/contracts": "0755",
    },
    owner = "0.0",
    package_dir = "agent_os",
    tags = ["manual"],
    target_compatible_with = _ELIXIR_ONLY,
)

# The runtime payload makes the package complete for a host app that consumes agent_os outside
# Bazel: the Elixir library, NIF, kernel, and supported flavor images are one artifact. These
# are the real graph outputs, not copied source-tree byproducts.
pkg_tar(
    name = "agent_os_package_runtime",
    create_parents = False,
    files = {
        "//memcontainers/images:atlas": "priv/images/atlas.tar",
        "//memcontainers/images:loom": "priv/images/loom.tar",
        "//memcontainers/images:minimal": "priv/images/minimal.tar",
        "//memcontainers/images:paper": "priv/images/paper.tar",
        "//memcontainers/images:posix": "priv/images/posix.tar",
        "//memcontainers/kernel/rust:kernel": "priv/kernel/kernel.wasm",
    },
    mode = "0644",
    modes = {
        "priv": "0755",
        "priv/images": "0755",
        "priv/kernel": "0755",
    },
    owner = "0.0",
    package_dir = "agent_os",
    tags = ["manual"],
    target_compatible_with = _ELIXIR_ONLY,
)

# A complete path-dependency-shaped runtime package for external Mix/Phoenix consumers:
#
#   {:agent_os, path: "../agent_os"}
#
# Host applications start `AgentOS.Supervisor` in their own supervision tree; the package does not
# auto-start a server. The host can read packaged runtime assets from priv/kernel and priv/images.
pkg_tar(
    name = "agent_os_package_impl",
    create_parents = False,
    empty_dirs = [
        "agent_os",
        "agent_os/lib",
        "agent_os/lib/agent_os",
        "agent_os/lib/agent_os/contracts",
        "agent_os/lib/agent_os/host",
        "agent_os/lib/agent_os/sidecars",
        "agent_os/lib/agent_os/sidecars/firecracker",
        "agent_os/lib/agent_os/sidecars/providers",
        "agent_os/priv",
        "agent_os/priv/images",
        "agent_os/priv/kernel",
    ],
    mode = "0644",
    modes = {
        "agent_os": "0755",
        "agent_os/lib": "0755",
        "agent_os/lib/agent_os": "0755",
        "agent_os/lib/agent_os/contracts": "0755",
        "agent_os/lib/agent_os/host": "0755",
        "agent_os/lib/agent_os/sidecars": "0755",
        "agent_os/lib/agent_os/sidecars/firecracker": "0755",
        "agent_os/lib/agent_os/sidecars/providers": "0755",
        "agent_os/priv": "0755",
        "agent_os/priv/images": "0755",
        "agent_os/priv/kernel": "0755",
    },
    owner = "0.0",
    tags = ["manual"],
    target_compatible_with = _ELIXIR_ONLY,
    deps = [
        ":agent_os_package_nif",
        ":agent_os_package_contracts",
        ":agent_os_package_runtime",
        ":agent_os_package_src",
    ],
)

elixir_file(
    name = "agent_os_package",
    actual = ":agent_os_package_impl",
    output = "agent_os_package.tar",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
